[package]
name = "mixin-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
jwt-simple = "0.11.2"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
toml = "0.5.8"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
